Ajustamos el menú pens, cambiamos la ilustración de servicios, corregimos bugs de z-index

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -89,8 +89,12 @@ body{
 .menu-navegacion a{
     color: #fff;
     text-decoration: none;
+    border-bottom: 3px solid transparent;
 }
 
+.menu-navegacion a:hover{
+    border-color: #fff;
+}
 
 
 .titulo{
@@ -121,7 +125,7 @@ body{
 }
 
 .contenedor-servicio img{
-    min-width: 10%;
+    width: 40%;
 }
 
 .checklist-servicio{
